# ISPyPSA

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  code_guide.md  demo_flow_path_costs.py  dodo.py  example_plotly_plotting.py  example_workflow.py  extra.css  index.html  interface_mockup.py  ispypsa_config.yaml  ispypsa_config_dev.yaml  mkdocs.yaml  noxfile.py  objects.inv  operational_modelling_diff.txt  package-lock.json  pyproject.toml  repomix-output.md  repomix-output.txt  repomix.config.json  sitemap.xml
.github/workflows/: cicd.yml
api/: index.html
cli/: index.html
config/: index.html
development_guides/: 1. drafting.md  2. revise.md  3. refactor.md  4. test.md
docs/: api.md  cli.md  config.md  extra.css  getting_started.md  guide.md  index.md  method.md  workflow.md
docs/examples/: example_api_workflow.md  example_config.md  ispypsa_config.yaml
docs/scripts/: copy_files.py
docs/tables/: ispypsa.md
downloads/: ispypsa_config.yaml
examples/example_api_workflow/: index.html
examples/example_config/: index.html
getting_started/: index.html
guide/: index.html
ispypsa_runs/development/: ispypsa_config.yaml
ispypsa_runs/new_test_run/: ispypsa_config.yaml
method/: index.html
model_data/ispypsa_inputs/: ispypsa_config.yaml
model_inputs/: ipypsa_config.yaml  ispypsa_config.yaml
scripts/: build_75_test_cache.py  copy_files.py  extract_plexos_constraints.py  workbook_extract_constraint.py
search/: search_index.json
src/ispypsa/: __init__.py  cli.py  feature_flags.py  feature_flags.yaml  helpers.py  logging.py
tables/ispypsa/: index.html
tables/pypsa_friendly/: index.html
tests/: conftest.py  test_templater.py
tests/config/: test_pydantic_model_config.py  test_validators.py
tests/templater/: test_energy_policy_targets.py  test_flow_paths.py  test_fuzzy_matching.py  test_generator_dynamic_properties.py  test_generator_static_properties.py  test_generators.py  test_helpers.py  test_nodes.py  test_regions_and_zones.py  test_renewable_energy_zones.py  test_templater.py
tests/test_cli/: __init__.py  cli_test_helpers.py  cli_test_helpers_new_table_formats.py  test_create_and_run_capacity_expansion_model.py  test_create_and_run_operational_model.py  test_create_ispypsa_inputs.py  test_create_ispypsa_inputs_new_table_formats.py  test_create_operational_timeseries.py  test_create_pypsa_friendly_inputs.py  test_create_pypsa_friendly_inputs_new_table_formats.py
tests/test_config/: test_pydantic_model_config.py
tests/test_data_fetch/: test_download.py
tests/test_iasr_table_caching/: test_local_cache.py
tests/test_model/: test_add_carriers.py  test_add_generators.py  test_add_links_with_timeslice_limits.py  test_add_storage.py  test_custom_constraints.py  test_custom_constraints_with_temporal_scope.py  test_initialise.py  test_updating_time_series.py
tests/test_plotting/: test_generation.py  test_helpers.py  test_plot.py  test_transmission.py  test_utils.py  test_website.py
tests/test_results/: test_extract.py  test_generation.py  test_helpers.py  test_transmission.py
tests/test_scripts/: conftest.py  test_extract_plexos_constraints.py
tests/test_templater/: conftest.py  test_connection_and_build_costs.py  test_create_ispypsa_inputs_template.py  test_custom_constraints_from_plexos.py  test_custom_constraints_validation.py  test_energy_policy_targets.py  test_filter_template.py  test_flow_path_costs.py  test_flow_paths.py  test_fuzzy_matching.py  test_generator_dynamic_properties.py  test_generator_static_properties.py  test_generators_new_entrant.py  test_geography.py  test_helpers.py  test_network_expansion.py  test_new_entrants.py  test_nodes.py  test_renewable_energy_zones.py  test_rez_transmission_costs.py  test_storage.py  test_timeslices.py  test_transmission.py  test_transmission_nem_regions.py  test_transmission_paths.py  test_transmission_single_region.py
tests/test_temporal_resolution_reduction/: test_combined_filters.py  test_merge_snapshot_dataframes.py  test_named_representative_weeks.py  test_temporal_filters_additional.py  test_time_series_named_representative_weeks_filter.py  test_time_series_representative_weeks_filter.py
tests/test_translator/: ispypsa_config.yaml  test_add_snapshot_weightings.py  test_buses.py  test_constraints.py  test_create_expansion_limit_constraints.py  test_create_pypsa_friendly_inputs.py  test_create_pypsa_friendly_inputs_new_format.py  test_ecaa_generators.py  test_filter_and_save_timeseries.py  test_generators.py  test_investment_period_weighting.py  test_lines.py  test_links.py  test_list_timeseries_files.py  test_network.py  test_policy_custom_constraints.py  test_process_manual_custom_constraints.py  test_sample_ispypsa_tables_fixture.py  test_snapshot.py  test_time_series_checker.py  test_timeslice_snapshots.py  test_translate_custom_constraints.py  test_translate_storage.py  test_translator_helpers.py  test_unserved_energy_generators.py
tests/test_translator_and_model/: test_limit_on_transmission_expansion.py  test_time_varying_flow_path_costs.py  test_vre_build_limit_custom_constraints.py
tests/test_validation/: test_validator.py
tests/test_workbook_table_cache/: batteries_summary.csv  battery_properties.csv  coal_minimum_stable_level.csv  coal_prices_progressive_change.csv  coal_prices_step_change.csv  committed_generators_summary.csv  connection_cost_forecast_non_rez_progressive_change.csv  connection_cost_forecast_non_rez_step_change&green_energy_exports.csv  connection_cost_forecast_wind_and_solar_progressive_change.csv  connection_cost_forecast_wind_and_solar_step_change&green_energy_exports.csv  connection_costs_for_wind_and_solar.csv  connection_costs_other.csv  existing_generators_summary.csv  expected_closure_years.csv  fixed_opex_existing_committed_anticipated_additional_generators.csv  gas_prices_progressive_change.csv  gas_prices_step_change.csv  gpg_min_stable_level_existing_generators.csv  initial_build_limits.csv  interconnector_transfer_capability.csv  locational_cost_factors.csv  (+17 more)
workflow/: index.html
(+3720 files in other folders)
