[project]
name = "ISPyPSA"
version = "0.1.0"
description = "An open-source capacity expansion model based on the methodology and datasets used by the Australian Energy Market Operator (AEMO) in their Integrated System Plan (ISP)."
authors = [
    { name = "prakaa", email = "abiprakash007@gmail.com" },
    { name = "nick-gorman", email = "n.gorman305@gmail.com" },
    { name = "dylanjmcconnell", email = "dylan.mcconnell@unsw.edu.au" }
]
dependencies = [
    "pandas>=2.2.2",
    "pypsa==0.34.1",
    "pyyaml>=6.0.2",
    "doit>=0.36.0",
    "xmltodict>=0.13.0",
    "thefuzz>=0.22.1",
    "isp-trace-parser>=1.0.3",
    "pyarrow>=18.0.0",
    "tables>=3.10.1",
    "isp-trace-parser>=1.0.3",
    "isp-workbook-parser>=2.6.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
ispypsa = "ispypsa.cli.cli:main"

[project.optional-dependencies]
solvers = [
    "linopy>=0.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1",
    "ipython>=8.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.8.0",
    "sphinx>=6.0",
    "myst-parser>=3.0.1",
    "myst-nb>=1.1.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-book-theme>=1.1.3",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-autobuild>=2024.9.3",
    "mkdocs-material>=9.6.9",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ispypsa"]

[tool.pytest.ini_options]
# path to tests for pytest
testpaths = ["src", "tests"]
# addopts = add options
# --cov points pytest-cov to the src/ dir
# --cov-branch runs branch coverage
addopts = "-ra --cov=src/ --cov-branch --cov-report xml:tests/coverage.xml --cov-report html:tests/htmlcov"

[tool.ruff.lint]
select = [
    # isort
    "I",
]
